--- a/pet_airbnb_front_end/src/App.css
+++ b/pet_airbnb_front_end/src/App.css
@@ -18,6 +18,7 @@
   margin-left: 0px;
   
 }
+
 .ScheduleForm{
   display: flex;
   /* margin-right: 300px; */
@@ -51,7 +52,11 @@
   margin-top: 15px;
   flex: 1 1 auto;
 }
+.Signup,
+.Login,
 .Schedule,
+.UserSchedules,
+.UserProfile,
 .CompanyShowPage{
   margin-top: 17px;
 }
@@ -62,6 +67,9 @@
   /* margin-right: 20px;
   margin-left: 5px;
   margin-top: 5px; */
+}
+.AskToLogIn{
+  float: right;
 }
 .CommentCard .Service{
   color:
@@ -101,4 +109,29 @@ input[type="radio"]{
   /* margin-right: 20px;
   margin-left: 5px;
   margin-top: 5px; */
+}
+.Schedule{
+  border-bottom: 1px solid rgb(224, 224, 224);
+  display: flex;
+
+}
+.CommentOnSchedule{
+  /* display: flex; */
+  size:20%;
+  /* float: right; */
+  
+  margin-left: 50%;
+  margin-top: 10px;
+}
+.Dark{
+  color:black
+}
+.Light{
+  color:lightgrey
+}
+.address{
+  font-size: 14px;
+}
+.CompanyCard .TextContent .name{
+  
 }
