--- a/pet_airbnb_front_end/src/App.css
+++ b/pet_airbnb_front_end/src/App.css
@@ -140,3 +140,12 @@ input[type="radio"]{
   /* margin-top: 50px;
   float: right;*/
 } 
+/* .prevPic{
+  width: 300px;
+  border: grey 1px;
+}
+
+.prevPic img{
+  max-height: 100%;
+  max-width: 100%;
+} */
