--- a/pet_airbnb_front_end/src/App.css
+++ b/pet_airbnb_front_end/src/App.css
@@ -140,7 +140,7 @@ input[type="radio"]{
   /* margin-top: 50px;
   float: right;*/
 } 
-/* .prevPic{
+.prevPic{
   width: 300px;
   border: grey 1px;
 }
@@ -148,4 +148,4 @@ input[type="radio"]{
 .prevPic img{
   max-height: 100%;
   max-width: 100%;
-} */
+}
