--- a/pet_airbnb_front_end/src/App.css
+++ b/pet_airbnb_front_end/src/App.css
@@ -132,16 +132,18 @@ input[type="radio"]{
 .prevAllPics {
   display:flex;
   margin: auto;
+  /* justify-content: right */
 }
 .prevPic{
-  width: 300px;
-  height: 300px;
+  width: 200px;
+  height: 200px;
   border: grey 1px;
+  margin-right: 15px;
 }
-
-.prevPic img{
-  max-height: 300px;
-  max-width: 100%;
+.prevAllPics .prevPic img{
+  margin-left: 5px;
+  height: 100%;
+  width: 100%;
 }
 .Dark{
   color:black
